@@ -1,4 +1,4 @@
-======================
+
 STAR Player addon for Kodi
 ======================
 
