@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.star.gr" version="1.2.1" name="STAR Player" provider-name="Twilight0">
+<addon id="plugin.video.star.gr" version="1.2.2" name="STAR Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
 		<import addon="script.module.tulip" version="1.2.2" />
@@ -9,15 +9,21 @@
 		<provides>video</provides>
 	</extension>
 	<extension point="xbmc.addon.metadata">
-		<summary lang="en">STAR Player addon for Kodi</summary>
-		<description lang="en">STAR live and on-demand broadcasts</description>
-		<description lang="el">Ζωνταντές και on demand υπηρεσίες του STAR</description>
-		<disclaimer lang="en">This addon offers content available in Greece and is not published nor endorsed by star.gr</disclaimer>
-		<disclaimer lang="el">Το πρόσθετο αυτό προσφέρει περιεχόμενο διαθέσιμο στην Ελλάδα και δεν έχει δημοσιευθεί ούτε εγκριθεί από το star.gr</disclaimer>
+		<summary lang="en_GB">STAR Player addon for Kodi</summary>
+        <summary lang="en_GR">Πρόσθετο STAR Player για το Kodi</summary>
+		<description lang="en_GB">STAR live and on-demand broadcasts</description>
+		<description lang="el_GR">Ζωνταντές και on demand υπηρεσίες του STAR</description>
+		<disclaimer lang="en_GB">This addon offers content available in Greece and is not published nor endorsed by star.gr</disclaimer>
+		<disclaimer lang="el_GR">Το πρόσθετο αυτό προσφέρει περιεχόμενο διαθέσιμο στην Ελλάδα και δεν έχει δημοσιευθεί ούτε εγκριθεί από το star.gr</disclaimer>
 		<license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
-		<source>https://github.com/lambda81/plugin.video.star.gr</source>
+		<source>https://github.com/Twilight0/plugin.video.star.gr</source>
 		<website>http://www.star.gr/</website>
+		<size>238009</size>
 		<news>
+[B]1.2.2[/B]
+- Cosmetics
+- Various tweaks in addon.xml
+
 [B]1.2.1[/B]
 - Fixed playback for youtube, web tv videos
 - Made youtube addon mandatory
@@ -42,7 +48,7 @@
 			<fanart>fanart.jpg</fanart>
 		</assets>
 		<platform>all</platform>
-		<language>el</language>
+		<language>en el</language>
 		<!--<forum></forum>-->
 		<!--<email></email>-->
 	</extension>
